# myopic-mces

./: .gitignore  LICENSE  MCES_ILP.py  MCES_SAT.py  README.md  conda_env.yml  example-data.csv  filter_MCES.py  graph.py  molecule_comparison.py  nextflow.config  pyproject.toml
.github/workflows/: build_publish.yml  test.yml  test_manual.yml  workflow.yaml
evaluation/: README  tanimoto.py
example/: example_data_out.csv
nextflow/: README.md  modules.nf  one_dataset.nf  sanity_check.py  two_datasets.nf
src/: test_status.py
src/myopic_mces/: MCES_ILP.py  __init__.py  combine_hdf5_batches.py  filter_MCES.py  filter_dataset.py  graph.py  myopic_mces.py  prepare_input.py
testdata/: bio_dists_main_mces.csv  f1_res.csv  huh.csv  special_idx.csv  test_smiles.csv  test_struct.csv
tests/: conftest.py  test_cli.py  test_filters.py  test_ilp.py  test_mapping.py  test_modes.py
tests/testdata/: f0_res.csv  f2_res.csv  smiles_subset.csv
